--- a/public/global.css
+++ b/public/global.css
@@ -31,7 +31,7 @@ label {
 
 input, button, select, textarea {
 	font-family: inherit;
-	font-size: inherit;
+	font-size: 12px;
 	-webkit-padding: 0.4em 0;
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
