--- a/public/global.css
+++ b/public/global.css
@@ -12,7 +12,6 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
@@ -31,7 +30,7 @@ label {
 }
 
 input, button, select, textarea {
-	font-family: inherit;
+	font-family: 'Fira Code', monospace;;
 	font-size: 12px;
 	-webkit-padding: 0.4em 0;
 	padding: 0.4em;
