--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,7 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-
+    background-color: #f2f3f4;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
