--- a/public/global.css
+++ b/public/global.css
@@ -1,13 +1,12 @@
 html, body {
 	position: relative;
 	width: 100%;
-	height: 100%;background-color: #f2f3f4;
+	height: 100%;background-color: #fff;
 }
 
 body {
 	color: #333;
 	margin: 0;
-    background-color: #f2f3f4;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
