--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -2233,9 +2233,9 @@ label.file-label {
   cursor: pointer;
   position: relative;
 }
-/* .checkboxWrap .checkbox-label input[type="checkbox"] {
+.checkboxWrap .checkbox-label input[type="checkbox"] {
   display: none;
-} */
+}
 .checkboxWrap .checkbox-label span {
   font-size: 14px;
   font-weight: 400;
@@ -2268,7 +2268,7 @@ label.file-label {
   transform: translateY(-50%);
   border-radius: 3px;
   background-color: #0067ff;
-  background-image: url(../images/icon/checked.svg);
+  background-image: url(../assets/images/icon/checked.svg);
   background-repeat: no-repeat;
   background-size: 12px;
   background-position: center;
@@ -2286,7 +2286,7 @@ label.file-label {
   width: 20px;
   height: 20px;
   background-color: #fff;
-  background-image: url(../images/icon/checked_default.svg);
+  background-image: url(../assets/images/icon/checked_default.svg);
   border: 1px solid #e8e8e8;
 }
 
