fix: modify whole page view

--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -2354,7 +2354,7 @@ label.file-label {
   justify-content: space-between;
 }
 .menu-container .menu-wrapper-container {
-  width: 1260px;
+  width: 100%;
   overflow: hidden;
 }
 .menu-container .menu-wrapper {
