--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -299,6 +299,7 @@ th.pl-20 {
   box-sizing: border-box;
   display: flex;
   align-items: center;
+  position: sticky;
 }
 
 #wrap .headerWrap .logoWrap {
