--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -1945,7 +1945,7 @@ button.tableTootip {
   flex-flow: column;
   gap: 20px;
 }
-.formControlWrap {
+. {
   display: flex;
   width: 100%;
   position: relative;
